--- a/catalog-page.html
+++ b/catalog-page.html
@@ -21,7 +21,7 @@
             <div class="header__container">
                 <div class="header__logo">
                     <a href="#">
-                        <img src="/img/svg/logo.svg" alt="logo">
+                        <img src="./img/svg/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header__menu menu">
@@ -59,7 +59,7 @@
             <div class="search__container">
                 <div class="search__links">
                     <a href="#">
-                        <img src="/img/svg/home.svg" alt="home">
+                        <img src="./img/svg/home.svg" alt="home">
                     </a>
                     <p class="search-after"><a href="#">HOME</a></p>
                     <p><a href="#">SHORTS</a></p>
