--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header__container">
                 <div class="header__logo">
                     <a href="#">
-                        <img src="/img/svg/logo.svg" alt="logo">
+                        <img src="./img/svg/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header__menu menu">
@@ -64,7 +64,7 @@
 
                         <div class="page-item"></div>
                         <div class="page-item"></div>
-                        <img src="/img/image 1.png" alt="style man">
+                        <img src="./img/image__1.png" alt="style man">
 
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                     <div class="card-block">
                         <div class="card-item">
                             <div class="card-image">
-                                <img src="/img/short 1.png" alt="short image">
+                                <img src="./img/short_1.png" alt="short image">
                             </div>
                             <div class="card-name">
                                 <p class="name-item">Marchal's Original Cargo Short</p>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="card-item">
                             <div class="card-image">
-                                <img src="/img/short 2.png" alt="short image">
+                                <img src="./img/short_2.png" alt="short image">
                             </div>
                             <div class="card-name">
                                 <p class="name-item">Inlet Original Short</p>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="card-item">
                             <div class="card-image">
-                                <img src="/img/pant 1.png" alt="pant image">
+                                <img src="./img/pant_1.png" alt="pant image">
                             </div>
                             <div class="card-name">
                                 <p class="name-item">TGIF Pant</p>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="card-item">
                             <div class="card-image">
-                                <img src="/img/pant 2.png" alt="pant image">
+                                <img src="./img/pant_2.png" alt="pant image">
                             </div>
                             <div class="card-name">
                                 <p class="name-item">Inlet Original Pant</p>
@@ -159,7 +159,7 @@
                         <div class="page-item"></div>
                         <div class="page-item"></div>
 
-                        <img src="/img/pants image.png" alt="pants image">
+                        <img src="./img/pants_image.png" alt="pants image">
 
                     </div>
                     <div class="page-text">
@@ -174,7 +174,7 @@
                 <div class="about-block">
                     <div class="about-card">
                         <div class="about-img">
-                            <img src="/img/ecoths.jpg" alt="ecoths image">
+                            <img src="./img/ecoths.jpg" alt="ecoths image">
                             <div class="about-label">
                                 <p>ECOTHS: NOW 30% OFF!</p>
                             </div>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="about-card">
                         <div class="about-img">
-                            <img src="/img/powel.jpg" alt="powel image">
+                            <img src="./img/powel.jpg" alt="powel image">
                             <div class="about-label">
                                 <p>NEW POWELL PRINT SHIRT</p>
                             </div>
@@ -218,21 +218,21 @@
                         <div class="trend-cards">
                             <div class="trend-card">
                                 <div class="trend-image">
-                                    <img src="/img/belts.png" alt="belts image">
+                                    <img src="./img/belts.png" alt="belts image">
                                 </div>
                                 <p>Don't Forget a Belt!</p>
                                 <button class="trend-btn">SHOP ALL BELTS</button>
                             </div>
                             <div class="trend-card">
                                 <div class="trend-image">
-                                    <img src="/img/swim_trunk.png" alt="swim trunks image">
+                                    <img src="./img/swim_trunk.png" alt="swim trunks image">
                                 </div>
                                 <p>Swim Trunk Styles on Sale!</p>
                                 <button class="trend-btn">SHOP ALL SWIM TRUNKS</button>
                             </div>
                             <div class="trend-card">
                                 <div class="trend-image">
-                                    <img src="/img/home_catalog.png" alt="catalog image">
+                                    <img src="./img/home_catalog.png" alt="catalog image">
                                 </div>
                                 <p>Shop Newest Online Catalog</p>
                                 <button class="trend-btn">SHOP NEWEST CATALOG</button>
