--- a/product-page.html
+++ b/product-page.html
@@ -21,7 +21,7 @@
             <div class="header__container">
                 <div class="header__logo">
                     <a href="#">
-                        <img src="/img/svg/logo.svg" alt="logo">
+                        <img src="./img/svg/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header__menu menu">
@@ -59,7 +59,7 @@
                 <div class="search__container">
                     <div class="search__links">
                         <a href="#">
-                            <img src="/img/svg/home.svg" alt="home">
+                            <img src="./img/svg/home.svg" alt="home">
                         </a>
                         <p class="search-after"><a href="#">HOME</a></p>
                         <p class="search-after"><a href="#">SHORTS</a></p>
@@ -71,18 +71,18 @@
                 <div class="descr__container">
                     <div class="descr__imgblock">
                         <div class="descr-big">
-                            <img src="/img/big_img_front.png" alt="shorts image">
+                            <img src="./img/big_img_front.png" alt="shorts image">
                         </div>
                         <div class="descr-big">
-                            <img src="/img/big_img_back.png" alt="shorts image">
+                            <img src="./img/big_img_back.png" alt="shorts image">
                         </div>
 
                         <div class="descr-small small">
                             <div class="small-first simage">
-                                <img src="/img/small_img_front.png" alt="shorts image">
+                                <img src="./img/small_img_front.png" alt="shorts image">
                             </div>
                             <div class="small-second simage">
-                                <img src="/img/small_img_back.png" alt="shorts image">
+                                <img src="./img/small_img_back.png" alt="shorts image">
                             </div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                         <p class="descr-price">$67.00</p>
                         <p class="descr-c">COLOR:</p>
                         <div class="descr__color">
-                            <img src="/img/big_color.png" alt="color choose">
+                            <img src="./img/big_color.png" alt="color choose">
                         </div>
                         <p class="descr-s">SIZE:</p>
                         <div class="size-block">
@@ -152,10 +152,10 @@
                             <input class="card-btn btn2" type="button" value="ADD TO WISHLIST">
                         </div>
                         <div class="descr__sotial">
-                            <a href="#"><img src="/img/svg/facebook 1.svg" alt="facebook"></a>
-                            <a href="#"><img src="/img/svg/twitter 1.svg" alt="twitter"></a>
-                            <a href="#"><img src="/img/svg/pinterest 1.svg" alt="pinterest"></a>
-                            <a href="#"><img src="/img/svg/link 1.svg" alt="link"></a>
+                            <a href="#"><img src="./img/svg/facebook_1.svg" alt="facebook"></a>
+                            <a href="#"><img src="./img/svg/twitter_1.svg" alt="twitter"></a>
+                            <a href="#"><img src="./img/svg/pinterest_1.svg" alt="pinterest"></a>
+                            <a href="#"><img src="./img/svg/link_1.svg" alt="link"></a>
                         </div>
                         <div class="descr__shopping">
                             <p>- Worry Free Shopping -</p>
