--- a/catalog-page.html
+++ b/catalog-page.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header__container">
                 <div class="header__logo">
-                    <a href="#">
+                    <a href="index.html#">
                         <img src="./img/svg/logo.svg" alt="logo">
                     </a>
                 </div>
@@ -28,7 +28,7 @@
                     <nav class="menu__nav">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a class="menu__link" href="#">SHORTS</a>
+                                <a class="menu__link" href="catalog-page.html">SHORTS</a>
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link" href="#">PANTS</a>
@@ -61,8 +61,8 @@
                     <a href="#">
                         <img src="./img/svg/home.svg" alt="home">
                     </a>
-                    <p class="search-after"><a href="#">HOME</a></p>
-                    <p><a href="#">SHORTS</a></p>
+                    <p class="search-after"><a href="index.html#">HOME</a></p>
+                    <p><a href="catalog-page.html">SHORTS</a></p>
                 </div>
                 <div class="search__block">
                     <input type="search" name="search" id="search" placeholder="SEARCH">
