--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <nav class="menu__nav">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a class="menu__link" href="#">SHORTS</a>
+                                <a class="menu__link" href="catalog-page.html">SHORTS</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">PANTS</a>
+                                <a class="menu__link" href="catalog-page.html">PANTS</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">SHIRTS</a>
+                                <a class="menu__link" href="catalog-page.html">SHIRTS</a>
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link" href="#">ACCESSORIES</a>
