--- a/product-page.html
+++ b/product-page.html
@@ -20,7 +20,7 @@
         <header>
             <div class="header__container">
                 <div class="header__logo">
-                    <a href="#">
+                    <a href="index.html#">
                         <img src="./img/svg/logo.svg" alt="logo">
                     </a>
                 </div>
@@ -61,9 +61,9 @@
                         <a href="#">
                             <img src="./img/svg/home.svg" alt="home">
                         </a>
-                        <p class="search-after"><a href="#">HOME</a></p>
-                        <p class="search-after"><a href="#">SHORTS</a></p>
-                        <p><a href="#">Sportif's Original Short</a></p>
+                        <p class="search-after"><a href="index.html#">HOME</a></p>
+                        <p class="search-after"><a href="catalog-page.html">SHORTS</a></p>
+                        <p><a href="product-page.html">Sportif's Original Short</a></p>
                     </div>
                 </div>
             </section>
