--- a/product-page.html
+++ b/product-page.html
@@ -8,9 +8,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Oswald:wght@200;300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style/normalize.css">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="stylesheet" href="/style/catalog-page.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/catalog-page.css">
     <link rel="stylesheet" href="./components/Product_page/product-page.css">
     <title>Product Page</title>
 </head>
